# project-euler

./: .gitignore  LICENSE  README.ipynb  README.md  project-euler.cabal  solutions.ipynb
src/: 1.hs  2.hs  3.hs
