name:                project-euler
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/mario-campos/project-euler
license:             BSD3
license-file:        LICENSE
author:              Mario Campos
maintainer:          mario@mariocampos.io
copyright:           Copyright: (c) 2016 Mario Campos
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable project-euler
  hs-source-dirs:      src
  main-is:             3-2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
